-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.0 RC
-
None
-
-
206904596 (dev), 9f185cc3a (6.8)
The use of QGraphsLine's swap method causes a linker error:
unresolved external symbol "public: __cdecl QExplicitlySharedDataPointer<struct QGraphsLinePrivate>::~QExplicitlySharedDataPointer<struct QGraphsLinePrivate>(void)" (??1?$QExplicitlySharedDataPointer@UQGraphsLinePrivate@@@@QEAA@XZ)"
Code example:
QGraphsLine line1; QGraphsLine line2; line1.swap(line2);
- tests
-
QTBUG-128656 Unclear usage of QT_DECLARE_QESDP_SPECIALIZATION_DTOR_WITH_EXPORT
-
- Closed
-