Change swap to use QExplicitlySharedDataPointers swap instead of std::swap

Add tests for QGraphsLine

Fixes: QTBUG-129497
Pick-to: 6.8
Change-Id: I02b8249235739210b48bdc784af1db80075a642a
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>